--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NautilusOS</title>
+    <title>CloakOS</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
     <link rel="stylesheet" href="v86/v86-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,14 +34,14 @@
 <body>
     <div id="bootloader">
         <div class="boot-logo"><i class="fas fa-fish"></i></div>
-        <h1 class="boot-title"><b>NAUTILUS OS</b></h1>
+        <h1 class="boot-title"><b>CloakOS</b></h1>
         <div class="boot-version">Version 1.0</div>
         <div class="boot-options" id="bootOptions">
             <div class="boot-option selected" data-index="0">
-                <i class="fas fa-play"></i> <span>Nautilus OS</span>
+                <i class="fas fa-play"></i> <span>CloakOS</span>
             </div>
             <div class="boot-option" data-index="1">
-                <i class="fas fa-code"></i> <span>Nautilus OS (Command Line)</span>
+                <i class="fas fa-code"></i> <span>CloakOS (Command Line)</span>
             </div>
         </div>
         <div class="boot-hint">
