--- a/community/index.html
+++ b/community/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>NautilusOS Community</title>
-<meta name="description" content="The official community hub for NautilusOS apps, games, themes, and developer docs." />
+<title>CloakOS Community</title>
+<meta name="description" content="The official community hub for CloakOS apps, games, themes, and developer docs." />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css" />
@@ -14,7 +14,7 @@
 <body>
 <header class="site-header">
 <div class="container row between center">
-<a class="brand" href="./index.html">NautilusOS <span class="pill">Community</span></a>
+<a class="brand" href="./index.html">CloakOS <span class="pill">Community</span></a>
 <nav class="nav">
 <a href="./index.html" class="active">Home</a>
 <a href="./browse.html">Browse</a>
@@ -28,7 +28,7 @@
 
 <main>
 <section class="hero container">
-<h1>Build, share, and discover <span class="accent">apps, games, and themes</span> for NautilusOS</h1>
+<h1>Build, share, and discover <span class="accent">apps, games, and themes</span> for CloakOS</h1>
 <p class="lede">This is the official community hub where creators publish content and users explore what’s new. Everything is reviewed by its developer(s) and the Nautilus team.</p>
 <div class="actions">
 <a class="btn" href="./browse.html">Explore content</a>
@@ -46,12 +46,12 @@
 </div>
 <div class="card">
 <h3>Games</h3>
-<p>Arcade, puzzles, and experimental gameplay for NautilusOS.</p>
+<p>Arcade, puzzles, and experimental gameplay for CloakOS.</p>
 <a class="link" href="./browse.html#games">See games →</a>
 </div>
 <div class="card">
 <h3>Themes</h3>
-<p>Give NautilusOS a fresh coat of paint with community themes.</p>
+<p>Give CloakOS a fresh coat of paint with community themes.</p>
 <a class="link" href="./browse.html#themes">See themes →</a>
 </div>
 </section>
@@ -79,7 +79,7 @@
 
 <footer class="site-footer">
 <div class="container row between center">
-<small>AGPL-3.0 • © NautilusOS community</small>
+<small>AGPL-3.0 • © CloakOS community</small>
 <div class="row gap-sm">
 <a href="./help.html">Help</a>
 <a href="./request.html">Submit</a>
