--- a/community/help.html
+++ b/community/help.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Help • NautilusOS Community</title>
+<title>Help • CloakOS Community</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
 <header class="site-header">
 <div class="container row between center">
-<a class="brand" href="./index.html">NautilusOS <span class="pill">Community</span></a>
+<a class="brand" href="./index.html">CloakOS <span class="pill">Community</span></a>
 <nav class="nav">
 <a href="./index.html">Home</a>
 <a href="./browse.html">Browse</a>
@@ -55,7 +55,7 @@
 
 <footer class="site-footer">
 <div class="container row between center">
-<small>AGPL-3.0 • © NautilusOS community</small>
+<small>AGPL-3.0 • © CloakOS community</small>
 <div class="row gap-sm">
 <a href="./request.html">Submit</a>
 <a href="https://github.com/nautilus-os/community" target="_blank" rel="noopener">GitHub</a>
