--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             boot
         </div>
         <div id="bottom-text" style="position: absolute; bottom: 0.5rem; color: #888;">
-            made with <i class="fa-solid fa-heart"></i> by dinguschan
+            made with <i class="fa-solid fa-heart"></i> by Rishi
         </div>
         <div class="boot-loading" id="bootLoading">
             <div class="loading-bar-container">
